--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 SESSION_SECRET=123
+MONGODB_URI=mongodb://heroku_nwn6hxb2:orsipkineanlgvc9sh9dj9prq1@ds219459.mlab.com:19459/heroku_nwn6hxb2
