--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev-windows": "nodemon ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "connect-mongo": "^3.2.0",
     "connect-mongodb-session": "^2.3.3",
     "cookie-parser": "^1.4.5",
